--- a/gulp-start/package.json
+++ b/gulp-start/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.26.7",
+    "del": "^5.1.0",
+    "gulp-autoprefixer": "^7.0.1",
     "concat": "^1.0.3",
     "gulp": "^4.0.2",
     "gulp-rename": "^2.0.0",
